--- a/src/pages/add/channel/[id]/request.astro
+++ b/src/pages/add/channel/[id]/request.astro
@@ -1,9 +1,9 @@
 ---
 export const prerender = false;
 
-import { validateStoken } from '@/lib/Actions';
-import { GetServersByQuery } from '@/lib/APIcalls';
-import { BACKEND_URL } from '@/public.env';
+import { validateStoken } from '../../../../lib/Actions';
+import { GetServersByQuery } from '../../../../lib/APIcalls';
+import { BACKEND_URL } from '../../../../public.env';
 const payload = validateStoken(Astro.cookies.get('portals:stoken')?.value);
 const { id } = Astro.params;
 if (!payload || !id) return Astro.redirect('/');
@@ -14,8 +14,8 @@ const server = (await GetServersByQuery(BACKEND_URL, JSON.stringify(payload), {
 const isSuper = server.super._id.toString() === payload.user.id.toString();
 if (!isSuper) return Astro.redirect('/servers');
 
-import HomeLayout from '@/layouts/HomeLayout.astro';
-import PathAnchor from '@/components/PathAnchor.astro';
+import HomeLayout from '../../../../layouts/HomeLayout.astro';
+import PathAnchor from '../../../../components/PathAnchor.astro';
 ---
 
 <HomeLayout payload={payload}>
@@ -28,8 +28,12 @@ import PathAnchor from '@/components/PathAnchor.astro';
 			<img src="/group.svg" width="20" height="20" alt="" />
 		</PathAnchor>
 		<img src="/pac.svg" width="15" height="15" alt="" />
-		<PathAnchor text="Channels & Bridges">
+		<PathAnchor href={`/add/channel/${id}`} text="Channels & Bridges">
 			<img src="/dots.svg" width="20" height="20" alt="" />
+		</PathAnchor>
+		<img src="/pac.svg" width="15" height="15" alt="" />
+		<PathAnchor text="Bridge request">
+			<img src="/portal_base.svg" width="20" height="20" alt="" />
 		</PathAnchor>
     </div>
 	<div slot="nav" id="nav" class="mdColors">
@@ -39,21 +43,7 @@ import PathAnchor from '@/components/PathAnchor.astro';
 		<p>Make sure <em>you know where</em> are you sending <em><strong>bridge</strong></em> requests.</p>
 	</div>
 	<div slot="main" id="main">
-		<PathAnchor
-			color0="#242424"
-			color1="var(--essential-positive)"
-			text="Create new channel"
-			style="font-size:24px;"
-			href={`/add/channel/${id}/create`}
-		/>
-		or
-		<PathAnchor
-			color0="#242424"
-			color1="var(--essential-positive)"
-			text="Send bridge request"
-			style="font-size:24px;"
-			href={`/add/channel/${id}/request`}
-		/>
+
 	</div>
 </HomeLayout>
 
