change 'friends' section to 'user' section and added chat lock button

--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -66,8 +66,8 @@ const isServerPath =
 					client:load
 				/>
 				<ManagerPosChanger
-					text="Friends"
-					position="friends"
+					text="User"
+					position="user"
 					anchor={null}
 					client:load
 				/>
