--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -40,8 +40,8 @@ const mds = await EasyTryCatch(async () => {
 		</p>
 		<br />
 		<p>
-			in <strong>Friends</strong> manage your friends list and other stuff
-			related.
+			in <strong>User</strong> manage your friends list and other stuff
+			related with your account.
 		</p>
 		<br />
 		<p>Select one section to start experience PORTALS ...</p>
