--- a/src/pages/add/server/create.astro
+++ b/src/pages/add/server/create.astro
@@ -49,7 +49,7 @@ import { BACKEND_URL } from '@/public.env';
 			<footer>
 				<button type="submit">Create</button>
 			</footer>
-			<CreateSubmitter URL={BACKEND_URL} userID={payload.user.id.toString()} client:only="react"/>
+			<CreateSubmitter URL={BACKEND_URL} userID={payload.user._id.toString()} client:only="react"/>
 		</form>
 	</div>
 </HomeLayout>
