--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const LastPost = (await Astro.glob('../md/*.md')).reverse()[0];
     <section id="box2">
         <article>
             <span>
-                <img src="/preview.png" height="400px" alt="">
+                <img src="/screens/preview.png" height="400px" alt="">
             </span>
         </article>
         <aside>
