fix server icon

--- a/src/pages/servers/[svId]/[chanId].astro
+++ b/src/pages/servers/[svId]/[chanId].astro
@@ -35,7 +35,7 @@ const is = {
 		</PathAnchor>
 		<img src="/pac.svg" width="15" height="15" alt="" />
 		<PathAnchor text={server.name.toString()} href={`/servers/${svId}`}>
-			<img src="/group.svg" width="20" height="20" alt="" />
+			<img src="/global.svg" width="20" height="20" alt="" />
 		</PathAnchor>
 		<img src="/pac.svg" width="15" height="15" alt="" />
 		<PathAnchor text={channel.name.toString()}>
