--- a/src/components/LocalNav/UserSection.scss
+++ b/src/components/LocalNav/UserSection.scss
@@ -1,119 +1,131 @@
-$t:solid 0.2rem red;
-$r:solid 0.2rem blue;
-section#usersection{
-    display: flex;
-    justify-content: center;
+$t: solid 0.2rem red;
+$r: solid 0.2rem blue;
+section#usersection {
+	display: flex;
+	justify-content: center;
 
-    height: 74vh;
-    width: 100%;
+	height: 74vh;
+	width: 100%;
 
-    overflow: hidden auto;
-    letter-spacing: 0.1rem;
+	overflow: hidden auto;
+	letter-spacing: 0.1rem;
 
-    & button{
-        display: flex;
-        align-items: center;
+	& button {
+		display: flex;
+		align-items: center;
 
-        border: 0;
-        border-radius: 0.5rem;
-        
-        padding: 0.2rem;
+		border: 0;
+		border-radius: 0.5rem;
 
-        cursor: pointer;
-        background-color: var(--background-elevated-base);
-    }
-    & button.t{
-        background-color: transparent;
-    }
-    & button:hover{
-        background-color: var(--essential-positive);
-    }
-    & button#red:hover{
-        background-color: var(--essential-negative);
-    }
-    & button#blue:hover{
-        background-color: var(--essential-announcement);
-    }
+		padding: 0.2rem;
 
-    & div.scroll{
-        width: 70%;
-        height: auto;
+		cursor: pointer;
+		background-color: var(--background-elevated-base);
+	}
+	& button.t {
+		background-color: transparent;
+	}
+	& button:hover {
+		background-color: var(--essential-positive);
+	}
+	& button#red:hover {
+		background-color: var(--essential-negative);
+	}
+	& button#blue:hover {
+		background-color: var(--essential-announcement);
+	}
 
-        padding: 1rem 0;
+	& div.scroll {
+		width: 70%;
+		height: auto;
 
-        & header{
-            display: flex;
-            align-items: center;
+		padding: 1rem 0;
 
-            padding: 2rem;
-            gap: 1rem;
+		& header {
+			display: flex;
+			align-items: center;
 
-            & form#pop{
-                
-                & input{
-                    margin: 1rem;
-                }
-                & input[type=text]{
-                    padding: 0.5rem 1rem;
+			padding: 2rem;
+			gap: 1rem;
+		}
+		& article {
+			padding: 1rem 2rem;
 
-                    text-align: center;
-                    font-size: 20px;
+			& h3 {
+				display: flex;
+				align-items: center;
 
-                    border: 0;
-                    border-radius: 1rem;
-                    background-color: var(--background-elevated-base);
-                }
-                & input:is(:focus, :hover, :valid){
-                    outline: 0;
-                }
-                & input::-webkit-file-upload-button{
-                    cursor: pointer;
+				gap: 1rem;
+			}
+			& ul {
+				width: 100%;
 
-                    border: 0;
-                    border-radius: 1rem;
+				& li {
+					display: flex;
+					align-items: center;
+					justify-content: space-between;
 
-                    padding: 0.5rem 1rem;
+					width: 100%;
+				}
+			}
+		}
+	}
+}
 
-                    color: var(--text-base);
-                    background-color: var(--background-elevated-base);
-                    transition: all 100ms ease-in-out;
-                }
-                & input::-webkit-file-upload-button:hover{
-                    background-color: var(--essential-positive);
-                }
-                & button{
-                    padding: 0.5rem 1rem;
-                    margin: 0 auto;
-                    margin-top: 1rem;
-                }
-                & p{
-                    color: var(--essential-subdued);
-                }
-            }
-        }
-        & article{
-            padding: 1rem 2rem;
+form#pop {
+	& input {
+		margin: 1rem;
+	}
+	& input[type='text'] {
+		padding: 0.5rem 1rem;
 
-            & h3{
-                display: flex;
-                align-items: center;
+		text-align: center;
+		font-size: 20px;
 
-                gap: 1rem;
-            }
+		border: 0;
+		border-radius: 1rem;
+		background-color: var(--background-elevated-base);
+	}
+	& input:is(:focus, :hover, :valid) {
+		outline: 0;
+	}
+	& input::-webkit-file-upload-button {
+		cursor: pointer;
 
-            & ul{
-                width: 100%;
+		border: 0;
+		border-radius: 1rem;
 
-                & li{
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
+		padding: 0.5rem 1rem;
 
-                    width: 100%;
+		color: var(--text-base);
+		background-color: var(--background-elevated-base);
+		transition: all 100ms ease-in-out;
+	}
+	& input::-webkit-file-upload-button:hover {
+		background-color: var(--essential-positive);
+	}
+	& button {
+		padding: 0.5rem 1rem;
+		margin: 0 auto;
+		margin-top: 1rem;
+	}
+	& p {
+		color: var(--essential-subdued);
+	}
+}
 
+form#request{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 
-                }
-            }
-        }
-    }
+	padding: 1rem;
+
+	background-color: var(--background-base);
+
+	& div{
+		display: flex;
+		align-items: center;
+		gap: 1rem;
+	}
 }
